src/styles/blocks/header/header.scss
.header {
  background-color: $c-background;

  &__content {
    position: relative;
    display: flex;
    height: 100vh;
    height: 100svh;
    flex-direction: column;

    @include on-desktop {
      max-height: 800px;
    }
  }

  &__top {
    margin-bottom: 50px;

    @include on-tablet {
      margin-bottom: 99px;
    }
  }

  &__middle {
    @include page-grid;

    grid-template-rows: repeat(2, 1fr);
    height: 100%;
  }

  &__date {
    margin-bottom: 10px;
  }

  &__title {
    margin-bottom: 30px;

    @include on-tablet {
      margin: 0 0 20px 1px;
    }

    @include on-desktop {
      margin-bottom: 30px;
    }
  }

  &__main-text {
    margin-bottom: 40px;

    @include on-tablet {
      margin-bottom: 50px;
    }

    @include on-desktop {
      margin-bottom: 81px;
    }
  }

  &__desktop {
    display: none;
    flex-direction: row;
    gap: 20px;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 50px;

    &__date {
      text-wrap: nowrap;
    }

    &__line {
      width: 100%;
      border-bottom: 1px solid $c-white;
    }

    @include on-desktop {
      display: flex;
    }
  }

  &__bottom {
    grid-column: 1 / -1;
    height: 100%;
    width: 100%;
    background-image: url(../images/img_main_01.png);
    background-repeat: no-repeat;
    background-position: bottom;
    background-size: contain;
    margin: 0 auto;

    @include on-desktop {
      grid-column: 7 / -1;
      grid-row: 1 / 3;
    }
  }
}

.temp {
  grid-column: 1 / -1;

  @include on-desktop {
    grid-column: 1 / 7;
    grid-row: 1 / 3;
  }
}

.header__main-content-wrapper {
  display: flex;
  height: 100%;
  flex-direction: column;
  justify-content: space-between;
}

